--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,12 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Upgrade pip
         run :
           python -m pip install --upgrade pip
+
+      - name: Install dependencies
+        run :
           pip install pytest-playwright
 
       - name: Ensure browsers are installed
