--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         run: python -m playwright install chromium --with-deps
 
       - name: Run Tests
-        run: 
+        run: |
           cd cubeit
           python -m http.server 8000 &
           cd ..
