--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
           cd cubeit
           python -m http.server 8000 &
           cd ..
-          pytest -v
+          pytest -v --headed
