--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --headed --slowmo=500 --browser=chromium -s -v 
+addopts = --headed=false --slowmo=500 --browser=chromium -s -v 
